# mongo

./: .gitignore  Cargo.toml  EXAMPLES.md  LICENSE  README.md  bson.ts  build.ts  deno.json  deps.ts  egg.json  lib.ts  mod.ts  perf.ts  t.ts  temp.ts  test.deps.ts  test.ts
.github/: CODEOWNERS  Dockerfile  FUNDING.yml
.github/workflows/: ci.yml  deps.yaml  jsr.yml  udd.yml
bson/: bson.d.ts  bson.ts  mod.ts
demo/: main.ts
src/: client.ts  cluster.ts  collection.ts  cursor.ts  database.ts  error.ts  geospatial_types.ts  lib.rs  mongo_client.ts  read_concern.ts  read_preference.ts  types.ts  util.rs
src/auth/: base.ts  mod.ts  mongo_credentials.ts  pbkdf2.ts  providers.ts  scram.ts  x509.ts
src/collection/: collection.ts  find.ts  mod.ts
src/command/: aggregation.rs  close.rs  connect.rs  count.rs  delete.rs  distinct.rs  drop_connection.rs  find.rs  find_one.rs  indexes.rs  insert.rs  insert_one.rs  list_collection_names.rs  list_database_names.rs  mod.rs  update.rs
src/connection/: connection.ts  message.ts  util.ts
src/gridfs/: bucket.ts  indexes.ts  upload.ts
src/protocol/: cursor.ts  handshake.ts  header.ts  message.ts  mod.ts  protocol.ts
src/types/: geojson.ts  geospatial.ts  gridfs.ts  readWriteConcern.ts  read_write_concern.ts
src/utils/: bson.ts  decode_base64.ts  metadata.ts  ns.ts  srv.ts  uri.ts  (+1 more)
tests/: auth.test.ts  auth.ts  common.ts  connect.test.ts  connect.ts  curd.test.ts  deps.ts  indexes.test.ts  indexes.ts  test.deps.ts  test.ts
ts/: client.ts  collection.ts  database.ts  result.ts  type_convert.ts  types.ts  util.ts
(+46 files in other folders)
