[package]
name = "deno_mongo"
version = "0.1.0"
authors = ["Enok <416828041@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mongodb = "0.9.1"
bson = "0.14.0"
serde_json = "1.0.48"
serde = "1.0.104"
futures = "0.3.4"
deno_core = "0.35.0"
lazy_static = "1.4.0"
# deno = "0.29.0"