[package]
name = "deno_mongo"
version = "0.1.0"
authors = ["Enok <416828041@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mongodb = "0.9.2"
bson = "0.14.1"
serde_json = "1.0.50"
serde = "1.0.105"
futures = "0.3.4"
deno_core = "0.38.0"
lazy_static = "1.4.0"
# deno = "0.29.0"